# embive-tests

./: CMakeLists.txt  README.md  memory.ld
include/: riscv_test.h  test_macros.h
tests/rv32uc/: rvc.S
tests/rv64uc/: rvc.S
